Аргумент имя базы данных логирования

--- a/templates/connect_interface.html
+++ b/templates/connect_interface.html
@@ -15,6 +15,10 @@
       <input class="text-field__input" type="text" id="name" placeholder="Wet">
     </div>
 
+    <!-- <div class="text-field">
+      <label class="text-field__label" for="name">int</label>
+      <input class="text-field__input" type="text" id="name" placeholder="count">
+    </div> -->
 
     <div class="text-field">
       <label class="text-field__label" for="name">Value</label>
