--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,53 @@
-/* The switch - the box around the slider */
+/* Общие стили */
+body {
+  font-family: Arial, sans-serif;
+  background-image: url('Sprites/bg.jpg');
+  background-size: cover; /* Растягиваем изображение на весь экран */
+  background-position: center; /* Центрируем изображение по центру экрана */
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center; /* Центрируем контент по горизонтали */
+  align-items: center; /* Центрируем контент по вертикали */
+  min-height: 100vh; /* Чтобы контент был посередине на всю высоту экрана */
+}
+
+.container {
+  width: 30%; /* Ширина контейнера на 50% от ширины экрана */
+  background-color: rgba(255, 255, 255, 0.7); /* Белый цвет фона с прозрачностью 0.7 */
+  padding: 50px; /* Добавим немного отступов для контента внутри контейнера */
+  border-radius: 10px; /* Закругленные углы на 10px */
+}
+
+
+/* Стили для контейнера с текстовыми полями */
+.text-field {
+  margin-bottom: 20px;
+}
+
+.switch-field {
+  margin-bottom: 20px;
+}
+
+.send_button {
+  margin-bottom: 20px;
+}
+
+.text-field__label {
+  display: block;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.text-field__input {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+/* Стили для переключателя */
 .switch {
   position: relative;
   display: inline-block;
@@ -6,14 +55,12 @@
   height: 34px;
 }
 
-/* Hide default HTML checkbox */
-.switch input {
+.switch input { 
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-/* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
@@ -24,6 +71,7 @@
   background-color: #ccc;
   -webkit-transition: .4s;
   transition: .4s;
+  border-radius: 34px;
 }
 
 .slider:before {
@@ -36,14 +84,15 @@
   background-color: white;
   -webkit-transition: .4s;
   transition: .4s;
+  border-radius: 50%;
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #55a142;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #60f321;
 }
 
 input:checked + .slider:before {
@@ -52,127 +101,67 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-/* установим отступ 1rem от нижнего края элемента */
-.text-field {
-  margin-bottom: 1rem;
-}
-/* стили для label */
-.text-field__label {
-  display: block;
-  margin-bottom: 0.25rem;
-}
-/* стили для input */
-.text-field__input {
-  display: block;
-  height: calc(2.25rem + 2px);
-  padding: 0.375rem 0.75rem;
-  font-family: inherit;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #bdbdbd;
-  border-radius: 0.25rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-
+/* Стили для кнопки */
 .custom-btn {
-  width: 130px;
-  height: 40px;
-  color: #fff;
-  border-radius: 5px;
-  padding: 10px 25px;
-  font-family: 'Lato', sans-serif;
-  font-weight: 500;
-  background: transparent;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  position: relative;
-  display: inline-block;
-   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-   7px 7px 20px 0px rgba(0,0,0,.1),
-   4px 4px 5px 0px rgba(0,0,0,.1);
-  outline: none;
-}
-/* 3 */
-.btn-3 {
-  background: rgb(0,172,238);
-background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
-  width: 130px;
-  height: 40px;
-  line-height: 42px;
-  padding: 0;
+  display: block; /* Изменяем отображение на блочный элемент */
+  background-color: #4CAF50;
   border: none;
-
-}
-.btn-3 span {
+  color: white;
+  text-align: center; /* Выравниваем текст по центру */
+  font-size: 16px;
+  padding: 10px 24px;
+  cursor: pointer;
+  border-radius: 5px;
+  text-decoration: none;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  overflow: hidden;
   position: relative;
+  margin: 0 auto; /* Центрируем кнопку по горизонтали */
+}
+
+
+.custom-btn:after {
+  content: "";
+  background: #90EE90;
   display: block;
-  width: 100%;
-  height: 100%;
-}
-.btn-3:before,
-.btn-3:after {
   position: absolute;
-  content: "";
-  right: 0;
-  top: 0;
-   background: rgba(2,126,251,1);
-  transition: all 0.3s ease;
+  z-index: -1;
+  transition: all 0.4s;
 }
-.btn-3:before {
-  height: 0%;
-  width: 2px;
-}
-.btn-3:after {
-  width: 0%;
-  height: 2px;
-}
-.btn-3:hover{
-   background: transparent;
-  box-shadow: none;
-}
-.btn-3:hover:before {
-  height: 100%;
-}
-.btn-3:hover:after {
+
+.custom-btn:hover:after {
   width: 100%;
-}
-.btn-3 span:hover{
-   color: rgba(2,126,251,1);
-}
-.btn-3 span:before,
-.btn-3 span:after {
-  position: absolute;
-  content: "";
   left: 0;
-  bottom: 0;
-   background: rgba(2,126,251,1);
-  transition: all 0.3s ease;
 }
-.btn-3 span:before {
-  width: 2px;
-  height: 0%;
+
+/* Дополнительные стили для кнопки */
+.btn-3 {
+  color: #FFFFFF;
+  border: 2px solid #4CAF50;
 }
+
+.btn-3 span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.4s;
+}
+
 .btn-3 span:after {
-  width: 0%;
-  height: 2px;
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
 }
-.btn-3 span:hover:before {
-  height: 100%;
+
+.btn-3:hover span {
+  padding-right: 25px;
 }
-.btn-3 span:hover:after {
-  width: 100%;
+
+.btn-3:hover span:after {
+  opacity: 1;
+  right: 0;
 }
