--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,7 +14,7 @@ body {
 
 .container {
   width: 30%; /* Ширина контейнера на 50% от ширины экрана */
-  background-color: rgba(255, 255, 255, 0.7); /* Белый цвет фона с прозрачностью 0.7 */
+  background-color: rgba(255, 255, 255, 0.8); /* Белый цвет фона с прозрачностью 0.7 */
   padding: 50px; /* Добавим немного отступов для контента внутри контейнера */
   border-radius: 10px; /* Закругленные углы на 10px */
 }
@@ -81,14 +81,14 @@ body {
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: white;
+  background-color: rgb(203, 179, 179);
   -webkit-transition: .4s;
   transition: .4s;
   border-radius: 50%;
 }
 
 input:checked + .slider {
-  background-color: #55a142;
+  background-color: #cb6d9c;
 }
 
 input:focus + .slider {
@@ -104,7 +104,7 @@ input:checked + .slider:before {
 /* Стили для кнопки */
 .custom-btn {
   display: block; /* Изменяем отображение на блочный элемент */
-  background-color: #4CAF50;
+  background-color: #af4c9e;
   border: none;
   color: white;
   text-align: center; /* Выравниваем текст по центру */
@@ -123,7 +123,7 @@ input:checked + .slider:before {
 
 .custom-btn:after {
   content: "";
-  background: #90EE90;
+  background: #9d3bae;
   display: block;
   position: absolute;
   z-index: -1;
@@ -138,7 +138,7 @@ input:checked + .slider:before {
 /* Дополнительные стили для кнопки */
 .btn-3 {
   color: #FFFFFF;
-  border: 2px solid #4CAF50;
+  border: 2px solid #af4ca3;
 }
 
 .btn-3 span {
