JSON вывод сделал

--- a/templates/mainUI.html
+++ b/templates/mainUI.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="switch-field">
-        <label class="text-field__label" for="name">Light in bedroom</label>
+        <label class="text-field__label">Light in bedroom</label>
         <label class="switch">
             <input type="checkbox" id="check">
             <span class="slider round"></span>
@@ -30,7 +30,10 @@
       </div>
 
       <div class="send_button">
-        <button class="custom-btn btn-3" onclick="send_data()"><span>Send data</span></button>
+        <button class="custom-btn btn-3" onclick="set_values()"><span>Назначить</span></button>
+      </div>
+      <div class="send_button">
+        <button class="custom-btn btn-3" onclick="get_graph()"><span>Показать график</span></button>
       </div>
     </div>
 </body>
