--- a/templates/mainUI.html
+++ b/templates/mainUI.html
@@ -10,19 +10,19 @@
 </head>
 <body>
     <div class="container">
-      <h1>Smart home emulator by Раненый солджа</h1>
+      <h1>Эмулятор умного дома by Раненый солджа</h1>
       <div class="text-field">
-        <label class="text-field__label" for="name">Name sensor</label>
-        <input class="text-field__input" type="text" id="name" placeholder='К примеру "Wet"'>
+        <label class="text-field__label" for="name">Устройство</label>
+        <input class="text-field__input" type="text" id="name" placeholder='К примеру "MusicPlayer"'>
       </div>
 
       <div class="text-field">
-        <label class="text-field__label" for="name">Value</label>
-        <input class="text-field__input" type="text" id="value" placeholder='К примеру "34"'>
+        <label class="text-field__label" for="name">Значение</label>
+        <input class="text-field__input" type="text" id="value" placeholder='К примеру "Linkin Park - Mirror"'>
       </div>
 
       <div class="switch-field">
-        <label class="text-field__label">Light in bedroom</label>
+        <label class="text-field__label">Свет</label>
         <label class="switch">
             <input type="checkbox" id="check">
             <span class="slider round"></span>
@@ -33,7 +33,7 @@
         <button class="custom-btn btn-3" onclick="set_values()"><span>Назначить</span></button>
       </div>
       <div class="send_button">
-        <button class="custom-btn btn-3" onclick="get_graph()"><span>Показать график</span></button>
+        <button class="custom-btn btn-3" onclick="get_graph()"><span>Показать график датчиков</span></button>
       </div>
     </div>
 </body>
