Сортировка чисел устройств

--- a/templates/mainUI.html
+++ b/templates/mainUI.html
@@ -30,13 +30,13 @@
       </div>
 
       <div class="send_button">
-        <button class="custom-btn btn-3" onclick='set_values("SetValues")'><span>Назначить</span></button>
+        <button class="custom-btn btn-3" onclick='set_values("/SetValues")'><span>Назначить</span></button>
       </div>
       <div class="send_button">
-        <button class="custom-btn btn-3" onclick='set_values("GraphSensors")'><span>Показать график выбранного датчика</span></button>
+        <button class="custom-btn btn-3" onclick='set_values("/GraphSensors")'><span>Показать график выбранного датчика</span></button>
       </div>
       <div class="send_button">
-        <button class="custom-btn btn-3" onclick='set_values("GraphDevices")'><span>Показать график выбранного устройства</span></button>
+        <button class="custom-btn btn-3" onclick='set_values("/GraphDevices")'><span>Показать график выбранного устройства</span></button>
       </div>
     </div>
 </body>
